added filter form to some reports

--- a/templates/forms.html
+++ b/templates/forms.html
@@ -45,7 +45,7 @@ active
 
         <div class="card">
             <div class="container">
-                <a href="{{ url_for('make_payment') }}"> Bank Payment Receipt </a>
+                <a href="{{ url_for('make_payment') }}"> Bank Receipt Voucher</a>
                 <!-- make payment into the system -->
             </div>
         </div>
