--- a/templates/forms/make_payment.html
+++ b/templates/forms/make_payment.html
@@ -1,11 +1,11 @@
 {%extends 'base.html' %}
 
 {%block title%}
-Make Payment
+Bank Receipt Voucher
 {% endblock %}
 
 {% block header%}
-Make Payment
+Bank Receipt Voucher
 {% endblock  %}
 
 {% block anchor%}
