--- a/templates/queries.html
+++ b/templates/queries.html
@@ -66,7 +66,7 @@ active
 
     <div class="card">
         <div class="container">
-            <a href="{{ url_for('ledger_report') }}">Trial Balance</a>
+            <a href="{{ url_for('trial_balance') }}">Trial Balance</a>
         </div>
     </div>
 
