--- a/templates/query/loan_account.html
+++ b/templates/query/loan_account.html
@@ -21,6 +21,17 @@ COOLINK CO-OPERATIVE LOAN ACCOUNT
         <div class='p-tag'><h2>Loan: {{ person.loan_balance | currency }}</h2></div>
     </div> -->
 
+    <form method="get" class="">
+        <div class="">
+            {{ form.start_date.label }}
+            {{ form.start_date(class="form-control") }}
+        </div>
+        <div class="">
+            {{ form.end_date.label }}
+            {{ form.end_date(class="form-control") }}
+        </div>
+        <button type="submit" class="">Apply Filter</button>
+    </form>
     
     <table class='tab-content'id="info-table" >
         
