added loan verification feature

--- a/templates/forms.html
+++ b/templates/forms.html
@@ -36,6 +36,12 @@ active
                 <a href="{{ url_for('create_person') }}">Create Member</a>
             </div>
         </div>
+        
+        <div class="card">
+            <div class="container">
+                <a href="{{ url_for('register_loan') }}">Register Loan</a>
+            </div>
+        </div>
 
         <div class="card">
             <div class="container">
