--- a/templates/forms/loan_form.html
+++ b/templates/forms/loan_form.html
@@ -33,18 +33,12 @@ Create Loan
             <h1>Create Loan</h1>
 
             <div class="form-label">
-                {{ form.employee_id.label (class_='input-label') }} <br>
+                {{ form.name.label (class_='input-label') }} <br>
             </div>    
 
             <div class="form-box">
-                {{ form.employee_id(class_="input") }} <br>
-                {% if form.employee_id.errors %}
-                    <ul>
-                        {% for error in form.employee_id.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+                {{ form.name(class_="input") }} <br>
+                
             </div>
 
             <div class="form-label">
@@ -53,14 +47,7 @@ Create Loan
 
             <div class="form-box">
                 {{ form.amount(class_="input") }} <br>
-                {% if form.amount.errors %}
-                    <ul>
-                        {% for error in form.amount.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
-            </div>
+                
             
             <div class="form-label">
                 {{ form.interest_rate.label (class_='input-label')}}<br>
@@ -68,13 +55,16 @@ Create Loan
 
             <div class="form-box">
                 {{ form.interest_rate(class_="input") }}<br>
-                {% if form.interest_rate.errors %}
-                    <ul>
-                        {% for error in form.interest_rate.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+               
+            </div>
+
+            <div class="form-label">
+                {{ form.bank.label (class_='input-label')}}<br>
+            </div>
+
+            <div class="form-box">
+                {{ form.bank(class_="input") }}<br>
+               
             </div>
 
             <div class="form-label">
@@ -83,13 +73,7 @@ Create Loan
 
             <div class="form-box">
                 {{ form.start_date (class_="input")}} <br>
-                {% if form.start_date.errors %}
-                    <ul>
-                        {% for error in form.start_date.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+               
             </div>
 
             <div class="form-label">
@@ -98,15 +82,24 @@ Create Loan
 
             <div class="form-box">
                 {{ form.end_date (class_="input") }} <br>
-                {% if form.end_date.errors %}
-                    <ul>
-                        {% for error in form.end_date.errors %}
-                            <li>{{ error }}</li>
-                        {% endfor %}
-                    </ul>
-                {% endif %}
+                
+            </div>
+            <div class="form-label">
+                {{ form.description.label (class_='input-label')}}<br>
             </div>
 
+            <div class="form-box">
+                {{ form.description(class_="input") }}<br>
+               
+            </div>
+            <div class="form-label">
+                {{ form.ref_no.label (class_='input-label')}}<br>
+            </div>
+
+            <div class="form-box">
+                {{ form.ref_no(class_="input") }}<br>
+               
+            </div>
             <div class="button-wrapper">
                 {{ form.submit (class_="button")}}
             </div>
