added some tests and some payment authentication

--- a/templates/queries.html
+++ b/templates/queries.html
@@ -48,7 +48,7 @@ active
 
     <div class="card">
         <div class="container">
-            <a href="{{ url_for('get_income') }}">Income Statement</a> 
+            <a href="{{ url_for('income_statement') }}">Income Statement</a> 
         </div>
     </div>
 
