--- a/templates/forms/company_form.html
+++ b/templates/forms/company_form.html
@@ -1,57 +1,44 @@
-{%extends 'base.html' %}
-
-{%block title%}
-Create Company
-{% endblock %}
-
-{% block header%}
-Create Company
-{% endblock  %}
-
-{% block anchor%}
-<a href="{{ url_for('forms') }}" id='arrow'><i class="fa-solid fa-arrow-left"></i></a>
-{% endblock  %}
-
-{%block content%}
+{%extends 'base.html' %} {%block title%} Create Company {% endblock %} {% block
+header%} Create Company {% endblock %} {% block anchor%}
+<a href="{{ url_for('forms') }}" id="arrow"
+  ><i class="fa-solid fa-arrow-left"></i
+></a>
+{% endblock %} {%block content%}
 <body id="form">
-    <div class = "flash-messages">
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            <ul class="flash-messages">
-                {% for message in messages %}
-                    <li class="fade-out {{message[0]}}">{{message[1]}}</li>
-                {% endfor %}
-            </ul>
-        {% endif %}
-        {% endwith %}
-        </div>
-
-        <div class="form-wrapper"> 
-            <form method="POST">
-                {{ form.hidden_tag() }}
-
-                <div class="form-label">
-                    {{ form.name.label(class_='input-label') }} <br>
-                </div>
-                
-                <div class="form-box">
-                    {{ form.name(class_="input") }}<br>
-                </div>
-
-                <div class="form-label">
-                    {{ form.balance_bfd.label(class_='input-label') }} <br>
-                </div>
-
-                <div class="form-box">
-                    {{ form.balance_bfd(class_="input")}} <br>
-                </div>
-
-                <div class="button-wrapper">
-                    <input type="submit" value="Create" class="button">
-                </div>
-            </form>
-        </div>
+  <div class="full-form-content">
+    <div class="flash-messages">
+      {% with messages = get_flashed_messages(with_categories=true) %} {% if
+      messages %}
+      <ul class="flash-messages">
+        {% for message in messages %}
+        <li class="fade-out {{message[0]}}">{{message[1]}}</li>
+        {% endfor %}
+      </ul>
+      {% endif %} {% endwith %}
     </div>
+
+    <div class="form-wrapper">
+      <form method="POST">
+        {{ form.hidden_tag() }}
+
+        <div class="form-label">
+          {{ form.name.label(class_='input-label') }} <br />
+        </div>
+
+        <div class="form-box">{{ form.name(class_="input") }}<br /></div>
+
+        <div class="form-label">
+          {{ form.balance_bfd.label(class_='input-label') }} <br />
+        </div>
+
+        <div class="form-box">{{ form.balance_bfd(class_="input")}} <br /></div>
+
+        <div class="button-wrapper">
+          <input type="submit" value="Create" class="button" />
+        </div>
+      </form>
+    </div>
+  </div>
 </body>
 
 {%endblock%}
