--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,10 +13,10 @@
     <div class='all-sections'>
         
         <nav class='section-1'>
-            <div class="logo"></div>
+            <div class="logo"><img src="\static\logo.png" alt="logo"></div>
             <ul class="side-bar" id="side-bar">
                 
-                <li class="{%block dash%}active nav-item{%endblock%}">
+                <li class="{%block dash%}active nav-item{%endblock%}" id="move">
                     <a href="{{ url_for('dashboard') }}" class="nav-link"><i class="fa-solid fa-gauge"></i>
                     <span>Dashboard</span></a>
                 </li>
