--- a/templates/login.html
+++ b/templates/login.html
@@ -9,11 +9,16 @@
     <link rel="stylesheet" href="\static\css\style.css">
 </head>
 <body class='login'>
+                <!-- <div class="logo">
+                <img src="\static\logo.png" alt="logo">
+            </div> -->
     <div class="wrapper">
         <form method="POST">
             <!-- <img src="\static\images\coolink2.png" alt="coollinks-logo"> -->
+
             
             <h1 style='text-align: center'> Login </h1>
+
             <div class="input-box">
                 <!-- <input type="text" placeholder="username" required> -->
 
